critical-space/pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-service
  namespace: critical-space
spec:
  type: ClusterIP
  ports:
  - port: 8282
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-pay
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-pay
  namespace: critical-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-pay
  template:
    metadata:
      labels:
        app: webapp-pay
    spec:
      containers:
      - image: kodekloud/ecommerce:pay
        imagePullPolicy: Always
        name: webapp-pay
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
